# esp32_fall-detector

./: .gitignore  README.org  liveFallDetector.py  pyproject.toml  setup_config.py
